@@ -35,6 +35,7 @@ HEADER = r'''%% Generated by Sphinx.
 %(babel)s
 %(fontpkg)s
 %(fncychap)s
+%(longtable)s
 \usepackage{sphinx}
 %(preamble)s
 
@@ -112,9 +113,11 @@ class Table(object):
         self.col = 0
         self.colcount = 0
         self.colspec = None
+        self.rowcount = 0
         self.had_head = False
         self.has_verbatim = False
         self.caption = None
+        self.longtable = False
 
 
 class Desc(object):
@@ -142,6 +145,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
         'babel':           '\\usepackage{babel}',
         'fontpkg':         '\\usepackage{times}',
         'fncychap':        '\\usepackage[Bjarne]{fncychap}',
+        'longtable':       '\\usepackage{longtable}',
         'preamble':        '',
         'title':           '',
         'date':            '',
@@ -595,16 +599,21 @@ class LaTeXTranslator(nodes.NodeVisitor):
                 '%s:%s: nested tables are not yet implemented.' %
                 (self.curfilestack[-1], node.line or ''))
         self.table = Table()
+        self.table.longtable = 'longtable' in node['classes']
         self.tablebody = []
         # Redirect body output until table is finished.
         self._body = self.body
         self.body = self.tablebody
     def depart_table(self, node):
+        if self.table.rowcount > 30:
+            self.table.longtable = True
         self.body = self._body
-        if self.table.caption is not None:
+        if not self.table.longtable and self.table.caption is not None:
             self.body.append('\n\\begin{threeparttable}\n'
                              '\\caption{%s}\n' % self.table.caption)
-        if self.table.has_verbatim:
+        if self.table.longtable:
+            self.body.append('\n\\begin{longtable}')
+        elif self.table.has_verbatim:
             self.body.append('\n\\begin{tabular}')
         else:
             self.body.append('\n\\begin{tabulary}{\\textwidth}')
@@ -616,14 +625,35 @@ class LaTeXTranslator(nodes.NodeVisitor):
                 colspec = ('p{%.3f\\textwidth}|' % colwidth) * \
                           self.table.colcount
                 self.body.append('{|' + colspec + '}\n')
+            elif self.table.longtable:
+                self.body.append('{|' + ('l|' * self.table.colcount) + '}\n')
             else:
                 self.body.append('{|' + ('L|' * self.table.colcount) + '}\n')
+        if self.table.longtable and self.table.caption is not None:
+            self.body.append('\\caption{%s} \\\\\n' % self.table.caption)
+
+        if self.table.longtable:
+            self.body.append('\\hline\n')
+            self.body.append('\\endfirsthead\n\n')
+            self.body.append('\multicolumn{%s}{c}%%\n' % self.table.colcount)
+            self.body.append('{{\\bfseries \\tablename\\ \\thetable{} -- %s}} \\\\\n' % _('continued from previous page'))
+            self.body.append('\\hline\n')
+            self.body.append('\\endhead\n\n')
+            self.body.append('\\hline \multicolumn{%s}{|r|}{{%s}} \\\\ \\hline\n' % (
+                self.table.colcount, _('Continued on next page')))
+            self.body.append('\\endfoot\n\n')
+            self.body.append('\\hline\n')
+            self.body.append('\\endlastfoot\n\n')
+        else:
+            self.body.append('\\hline\n')
         self.body.extend(self.tablebody)
-        if self.table.has_verbatim:
+        if self.table.longtable:
+            self.body.append('\\end{longtable}\n\n')
+        elif self.table.has_verbatim:
             self.body.append('\\end{tabular}\n\n')
         else:
             self.body.append('\\end{tabulary}\n\n')
-        if self.table.caption is not None:
+        if not self.table.longtable and self.table.caption is not None:
             self.body.append('\\end{threeparttable}\n\n')
         self.table = None
         self.tablebody = None
@@ -642,8 +672,8 @@ class LaTeXTranslator(nodes.NodeVisitor):
         if self.next_table_colspec:
             self.table.colspec = '{%s}\n' % self.next_table_colspec
         self.next_table_colspec = None
-        self.body.append('\\hline\n')
-        self.table.had_head = True
+#        self.body.append('\\hline\n')
+#        self.table.had_head = True
     def depart_thead(self, node):
         self.body.append('\\hline\n')
 
@@ -657,6 +687,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
         self.table.col = 0
     def depart_row(self, node):
         self.body.append('\\\\\n')
+        self.table.rowcount += 1
 
     def visit_entry(self, node):
         if node.has_key('morerows') or node.has_key('morecols'):
