@@ -17,6 +17,14 @@ Release 1.0 (in development)
 Release 0.6.2 (in development)
 ==============================
 
+* #172: The ``obj`` role now links to modules as promised.
+
+* #19: Tables now can have a "longtable" class, in order to get
+  correctly broken into pages in LaTeX output.
+
+* Look for Sphinx message catalogs in the system default path before
+  trying ``sphinx/locale``.
+
 * Fix the search for methods via "classname.methodname".
 
 * #155: Fix Python 2.4 compatibility: exceptions are old-style
